# doodle

./: README.md  pyproject.toml
arxiv-service/: .gitignore  README.md  pyproject.toml
arxiv-service/src/arxivexplorer/: __init__.py  server.py
idea_amplifier/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
idea_amplifier/src/idea_amplifier/: server.py
src/doodle/: server.py
