[project]
name = "arxivexplorer"
version = "0.1.0"
description = "ArXiv Explorer MCP Server"
requires-python = ">=3.10"  # Changed to match MCP requirements
dependencies = [
    "arxiv",
    "feedparser",
    "python-dateutil",
    "mcp>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
arxivexplorer = "arxivexplorer:main"
