[project]
name = "idea-amplifier"
version = "0.1.0"
description = "A graph based catcher and retriever of connected ideas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.1.0",]
[[project.authors]]
name = "Leon van Bokhorst"
email = "leonvanbokhorst@users.noreply.github.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
idea-amplifier = "idea_amplifier:main"
